fixing align tag

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -33,7 +33,9 @@ div.degree {
 }
 
 div.group {
+
     aside {
+        display: inline-block;
         margin: 0 1.5%;
         width: 30%;
     }
